@@ -79,6 +79,7 @@ class TestNumpyArrayCreation(TestNumpyMethods):
         )
         self.assertNDArrayEqual(np.full_like(self.q, 2), np.array([[2, 2], [2, 2]]))
 
+    
 
 class TestNumpyArrayManipulation(TestNumpyMethods):
     # TODO
@@ -1499,6 +1500,12 @@ class TestNumpyUnclassified(TestNumpyMethods):
         expected = [5, 13, 17] * self.ureg.m
         helpers.assert_quantity_equal(np.linalg.norm(q, axis=0), expected)
 
+    @helpers.requires_array_function_protocol()
+    def test_geomspace(self):
+        start = 1* self.ureg.m
+        stop = 1* self.ureg.km
+        expected = [1, 10, 100, 1000] * self.ureg.m
+        helpers.assert_quantity_equal(np.geomspace(start, stop, num=4), expected)
 
 @pytest.mark.skip
 class TestBitTwiddlingUfuncs(TestUFuncs):
